# JSFractalEngine

./: .cproject  .gitignore  .project  .renderParams  Authentication.cpp  Authentication.h  ColorPalette.cpp  DBSystem.cpp  DBSystem.h  Fractal.cpp  Fractal.h  FractalGen.cpp  FractalGen.h  FractalJulia.cpp  FractalMultibrot.cpp  FractalMultibrot.h  ImageWriter.cpp  ImageWriter.h  LICENSE  Makefile  ParamaterSchema.h  Paramaters.cpp  ServerMakefile  SocketClient.cpp  build.number  build.xml  build.xml~  compile.sh  main.cpp
Server/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  Makefile  Toolchain-w32clang.cmake  Toolchain-w32clang.cmake~  buildscript.sh  buildscript.sh~  oldBuildScript.sh~
Server/etc/: SCHEMA_BASE  SCHEMA_MULTIBROT  neuralnetwork.txt  passwd  schema.json  servercfg.json
Server/lib/: sqlite3_win32.lib
Server/src/: AnimationBuilder.cpp  AnimationBuilder.h  ArtifactDistributer.cpp  ArtifactDistributer.h  Authentication.h  Client.cpp  Client.h  ClientCommunicator.cpp  ClientCommunicator.h  ColorPalette.cpp  ColorPalette.h  ConnectionManager.cpp  ConnectionManager.h  DBManager.cpp  DBManager.h  DirectoryManager.cpp  DirectoryManager.h  FTPServer.cpp  FTPServer.h  Fractal.cpp  Fractal.h  FractalGen.cpp  FractalGen.h  FractalGenTrackManager.cpp  FractalGenTrackManager.h  FractalHeightMap.cpp  FractalHeightMap.h  FractalJulia.cpp  FractalJulia.h  FractalLogger.cpp  FractalLogger.h  FractalMandleJulia.cpp  FractalMandleJulia.h  FractalMultibrot.h  ImageWriter.cpp  ImageWriter.h  ParamaterSchema.cpp  Paramaters.h  ParamsFile.cpp  ParamsFile.h  (+9 more)
(+132 files in other folders)
